--- a/freezer.html
+++ b/freezer.html
@@ -122,54 +122,54 @@
         <div class="catalog__container">
             <h2>CHEST FREEZERS</h2>
             <ul class="catalog__list">
-<!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/freezer/FW-CFR251.html">-->
-<!--                    <div class="catalog__item-img-container">-->
-<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
-<!--                    </div>-->
-<!--                    <div class="catalog__item-description">-->
-<!--                        <p>FW-CFR251</p>-->
-<!--                    </div>-->
-<!--                    </a>-->
-<!--                </li>-->
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-CFR251.html">
+                    <div class="catalog__item-img-container">
+                        <img src="assets/img/freezer/FW-CFR251.png">
+                    </div>
+                    <div class="catalog__item-description">
+                        <p>FW-CFR251</p>
+                    </div>
+                    </a>
+                </li>
 
-<!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/freezer/FW-CFR211.html">-->
-<!--                    <div class="catalog__item-img-container">-->
-<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
-<!--                    </div>-->
-<!--                    <div class="catalog__item-description">-->
-<!--                        <p>FW-CFR211</p>-->
-<!--                    </div>-->
-<!--                    </a>-->
-<!--                </li>-->
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-CFR211.html">
+                    <div class="catalog__item-img-container">
+                        <img src="assets/img/freezer/FW-CFR211.png">
+                    </div>
+                    <div class="catalog__item-description">
+                        <p>FW-CFR211</p>
+                    </div>
+                    </a>
+                </li>
 
-<!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/freezer/FW-CFR181.html">-->
-<!--                    <div class="catalog__item-img-container">-->
-<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
-<!--                    </div>-->
-<!--                    <div class="catalog__item-description">-->
-<!--                        <p>FW-CFR181</p>-->
-<!--                    </div>-->
-<!--                    </a>-->
-<!--                </li>-->
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-CFR181.html">
+                    <div class="catalog__item-img-container">
+                        <img src="assets/img/freezer/FW-CFR181.png">
+                    </div>
+                    <div class="catalog__item-description">
+                        <p>FW-CFR181</p>
+                    </div>
+                    </a>
+                </li>
 
-<!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/freezer/FW-CFR141.html">-->
-<!--                    <div class="catalog__item-img-container">-->
-<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
-<!--                    </div>-->
-<!--                    <div class="catalog__item-description">-->
-<!--                        <p>FW-CFR141</p>-->
-<!--                    </div>-->
-<!--                    </a>-->
-<!--                </li>-->
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-CFR141.html">
+                    <div class="catalog__item-img-container">
+                        <img src="assets/img/freezer/FW-CFR141.png">
+                    </div>
+                    <div class="catalog__item-description">
+                        <p>FW-CFR141</p>
+                    </div>
+                    </a>
+                </li>
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-CFR101.html">
                     <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">
+                        <img src="assets/img/freezer/FW-CFR101.png">
                     </div>
                     <div class="catalog__item-description">
                         <p>FW-CFR101</p>
@@ -199,16 +199,16 @@
                     </a>
                 </li>
 
-<!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/freezer/FW-CFR041.html">-->
-<!--                    <div class="catalog__item-img-container">-->
-<!--                        <img src="assets/img/freezer/FW-CFR071-051-041.png">-->
-<!--                    </div>-->
-<!--                    <div class="catalog__item-description">-->
-<!--                        <p>FW-CFR041</p>-->
-<!--                    </div>-->
-<!--                    </a>-->
-<!--                </li>-->
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-CFR041.html">
+                    <div class="catalog__item-img-container">
+                        <img src="assets/img/freezer/FW-CFR071-051-041.png">
+                    </div>
+                    <div class="catalog__item-description">
+                        <p>FW-CFR041</p>
+                    </div>
+                    </a>
+                </li>
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-CFR031.html">
@@ -325,38 +325,39 @@
                     </a>
                 </li>
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR131.html">
-                        <div class="catalog__item-img-container">
-                            <img src="assets/img/freezer/FW-UFR131.png">
-                        </div>
-                        <div class="catalog__item-description">
-                            <p>FW-UFR131</p>
-                        </div>
-                    </a>
-                </li>
-
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR121.html">
-                        <div class="catalog__item-img-container">
-                            <img src="assets/img/freezer/FW-UFR121.png">
-                        </div>
-                        <div class="catalog__item-description">
-                            <p>FW-UFR121</p>
-                        </div>
-                    </a>
-                </li>
-
 <!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/freezer/FW-UFR341.html">-->
+<!--                    <a href="catalog/freezer/FW-UFR131.html">-->
 <!--                        <div class="catalog__item-img-container">-->
-<!--                            <img src="assets/img/freezer/FW-UFR341.png">-->
+<!--                            <img src="assets/img/freezer/FW-UFR131.png">-->
 <!--                        </div>-->
 <!--                        <div class="catalog__item-description">-->
-<!--                            <p>FW-UFR341</p>-->
+<!--                            <p>FW-UFR131</p>-->
 <!--                        </div>-->
 <!--                    </a>-->
 <!--                </li>-->
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR121.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR121.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR121</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-UFR341.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR341.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR341</p>
+                        </div>
+                    </a>
+                </li>
 
             </ul>
         </div>
