--- a/fridge.html
+++ b/fridge.html
@@ -124,41 +124,128 @@
 
     <div class="catalog">
         <div class="catalog__container">
-            <h2>TOP MOUNT REFRIGERATORS</h2>
+            <h2>TOP MOUNT REFRIGERATORS <sup>FROST FREE</sup></h2>
             <ul class="catalog__list">
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF342.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF342.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF342</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF302.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF302.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF302</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF282.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF282.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF282</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF262.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF262.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF262</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF292.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF292.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF292</p>
+                        </div>
+                    </a>
+                </li>
+
+
 <!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/fridge/FW-TRF782.html">-->
+<!--                    <a href="catalog/fridge/FW-TRF272.html">-->
 <!--                        <div class="catalog__item-img-container">-->
-<!--                            <img src="assets/img/fridge/FW-TRF782.png">-->
+<!--                            <img src="assets/img/fridge/FW-TRF272.png">-->
 <!--                        </div>-->
 <!--                        <div class="catalog__item-description">-->
-<!--                            <p>FW-TRF782</p>-->
+<!--                            <p>FW-TRF272</p>-->
 <!--                        </div>-->
 <!--                    </a>-->
 <!--                </li>-->
 
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-TSD105.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-TSD105.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-TSD105</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+
+            </ul>
+
+
+            <h2>BOTTOM MOUNT REFRIGERATORS <sup>FROST FREE</sup></h2>
+            <ul class="catalog__list">
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-TRF272.html">
+                    <a href="catalog/fridge/FW-BRF232.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-TRF272.png">
+                            <img src="assets/img/fridge/FW-BRF232.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>FW-TRF272</p>
+                            <p>FW-BRF232</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+
+            <h2>TOP MOUNT REFRIGERATORS <sup>MANUAL DEFROST</sup></h2>
+            <ul class="catalog__list">
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF782.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF782.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF782</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-TSD105.html">
+                    <a href="catalog/fridge/FW-TRF202.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-TSD105.png">
+                            <img src="assets/img/fridge/FW-TRF202.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>FW-TSD105</p>
+                            <p>FW-TRF202</p>
                         </div>
                     </a>
                 </li>
-
 
                 <li class="catalog__item">
                     <a href="catalog/fridge/FW-TRF362.html">
@@ -183,6 +270,7 @@
                 </li>
 
             </ul>
+
             <h2>COMPACT REFRIGERATORS</h2>
             <ul class="catalog__list">
 
@@ -198,132 +286,154 @@
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF132.html">
+                    <a href="catalog/fridge/FW-CRF161.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF132.png">
+                            <img src="assets/img/fridge/FW-CRF161.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>FW-CRF132</p>
+                            <p>FW-CRF161</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF042.html">
+                    <a href="catalog/fridge/FW-CRF131.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF042.png">
+                            <img src="assets/img/fridge/FW-CRF131.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>FW-CRF042</p>
+                            <p>FW-CRF131</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF032.html">
+                    <a href="catalog/fridge/FW-CRF351.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF032.png">
+                            <img src="assets/img/fridge/FW-CRF351.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>FW-CRF032</p>
+                            <p>FW-CRF351</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF002.html">
+                    <a href="catalog/fridge/FW-CRF251.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF002.png">
+                            <img src="assets/img/fridge/FW-CRF251.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>FW-CRF002</p>
+                            <p>FW-CRF251</p>
                         </div>
                     </a>
                 </li>
 
+
+
+
+
+
+
+
+
 <!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/fridge/FW-CRF161.html">-->
+<!--                    <a href="catalog/fridge/FW-CRF132.html">-->
 <!--                        <div class="catalog__item-img-container">-->
-<!--                            <img src="assets/img/fridge/FW-CRF161.png">-->
+<!--                            <img src="assets/img/fridge/FW-CRF132.png">-->
 <!--                        </div>-->
 <!--                        <div class="catalog__item-description">-->
-<!--                            <p>FW-CRF161</p>-->
+<!--                            <p>FW-CRF132</p>-->
 <!--                        </div>-->
 <!--                    </a>-->
 <!--                </li>-->
 
 <!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/fridge/FW-CRF131.html">-->
+<!--                    <a href="catalog/fridge/FW-CRF132.html">-->
 <!--                        <div class="catalog__item-img-container">-->
-<!--                            <img src="assets/img/fridge/FW-CRF131.png">-->
+<!--                            <img src="assets/img/fridge/FW-CRF132.png">-->
 <!--                        </div>-->
 <!--                        <div class="catalog__item-description">-->
-<!--                            <p>FW-CRF131</p>-->
+<!--                            <p>FW-CRF132</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF042.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF042.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF042</p>-->
 <!--                        </div>-->
 <!--                    </a>-->
 <!--                </li>-->
 
 <!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/fridge/FW-CRF351.html">-->
+<!--                    <a href="catalog/fridge/FW-CRF032.html">-->
 <!--                        <div class="catalog__item-img-container">-->
-<!--                            <img src="assets/img/fridge/FW-CRF351.png">-->
+<!--                            <img src="assets/img/fridge/FW-CRF032.png">-->
 <!--                        </div>-->
 <!--                        <div class="catalog__item-description">-->
-<!--                            <p>FW-CRF351</p>-->
+<!--                            <p>FW-CRF032</p>-->
 <!--                        </div>-->
 <!--                    </a>-->
 <!--                </li>-->
 
 <!--                <li class="catalog__item">-->
-<!--                    <a href="catalog/fridge/FW-CRF251.html">-->
+<!--                    <a href="catalog/fridge/FW-CRF002.html">-->
 <!--                        <div class="catalog__item-img-container">-->
-<!--                            <img src="assets/img/fridge/FW-CRF251.png">-->
+<!--                            <img src="assets/img/fridge/FW-CRF002.png">-->
 <!--                        </div>-->
 <!--                        <div class="catalog__item-description">-->
-<!--                            <p>FW-CRF251</p>-->
+<!--                            <p>FW-CRF002</p>-->
 <!--                        </div>-->
 <!--                    </a>-->
 <!--                </li>-->
+
 
             </ul>
 
-            <h2>RETRO STYLE REFRIGERATORS</h2>
-            <ul class="catalog__list">
+<!--            <h2>RETRO STYLE REFRIGERATORS</h2>-->
+<!--            <ul class="catalog__list">-->
 
-                <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF725.html">
-                        <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF725.png">
-                        </div>
-                        <div class="catalog__item-description">
-                            <p>FW-CRF725</p>
-                        </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF725.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF725.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF725</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF725-2.html">
-                        <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF725-2.png">
-                        </div>
-                        <div class="catalog__item-description">
-                            <p>FW-CRF725-2</p>
-                        </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF725-2.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF725-2.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF725-2</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF725-3.html">
-                        <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF725-3.png">
-                        </div>
-                        <div class="catalog__item-description">
-                            <p>FW-CRF725-3</p>
-                        </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF725-3.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF725-3.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF725-3</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-            </ul>
+<!--            </ul>-->
 
         </div>
     </div>
