--- a/ice.html
+++ b/ice.html
@@ -5,10 +5,6 @@
     <title>Faberware</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet">
     <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -118,8 +114,7 @@
 
 <main class="main">
     <div class="poster">
-        <img src="assets/img/fridge-poster.jpg">
-        <p>HIGH TECHNOLOGY IN YOUR KITCHEN</p>
+        <img src="assets/img/ice-poster.jpg" alt="FARBERWARE High Technology in your kitchen - Ice Makers">
     </div>
 
     <div class="catalog">
