--- a/freezer.html
+++ b/freezer.html
@@ -19,12 +19,12 @@
                     <img src="assets/partners/logo-cemglobal.png" width="136" height="51" alt="">
                 </a>
             </li>
-<!--            <li class="header__partners-item">-->
-<!--                <a href="https://cemglobaelx.com/">-->
-<!--                    <span>Electrolux</span>-->
-<!--                    <img src="assets/partners/logo-electolux.png" width="136" height="51" alt="">-->
-<!--                </a>-->
-<!--            </li>-->
+            <li class="header__partners-item">
+                <a href="https://www.electroluxcollection.com/">
+                    <span>Electrolux</span>
+                    <img src="assets/partners/logo-electolux.png" width="136" height="51" alt="">
+                </a>
+            </li>
             <li class="header__partners-item header__partners-item--current">
                 <a href="https://cemglobalfw.com/">
                     <span>Farberware</span>
